@@ -2244,14 +2244,7 @@ name|fs
 argument_list|)
 expr_stmt|;
 block|}
-if|if
-condition|(
-name|part
-operator|==
-literal|null
-condition|)
-block|{
-comment|// create the partition if it didn't exist before
+comment|// recreate the partition if it existed before
 name|part
 operator|=
 name|getPartition
@@ -2263,7 +2256,6 @@ argument_list|,
 literal|true
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 catch|catch
 parameter_list|(
@@ -3027,11 +3019,14 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+name|forceCreate
+condition|)
+block|{
+if|if
+condition|(
 name|tpart
 operator|==
 literal|null
-operator|&&
-name|forceCreate
 condition|)
 block|{
 name|LOG
@@ -3070,6 +3065,96 @@ argument_list|,
 name|pvals
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"altering partition for table "
+operator|+
+name|tbl
+operator|.
+name|getTableName
+argument_list|()
+operator|+
+literal|" with partition spec : "
+operator|+
+name|partSpec
+argument_list|)
+expr_stmt|;
+name|tpart
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|setOutputFormat
+argument_list|(
+name|tbl
+operator|.
+name|getTTable
+argument_list|()
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|getOutputFormat
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|tpart
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|setInputFormat
+argument_list|(
+name|tbl
+operator|.
+name|getTTable
+argument_list|()
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|getInputFormat
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|tpart
+operator|.
+name|getSd
+argument_list|()
+operator|.
+name|getSerdeInfo
+argument_list|()
+operator|.
+name|setSerializationLib
+argument_list|(
+name|tbl
+operator|.
+name|getSerializationLib
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|alterPartition
+argument_list|(
+name|tbl
+operator|.
+name|getTableName
+argument_list|()
+argument_list|,
+operator|new
+name|Partition
+argument_list|(
+name|tbl
+argument_list|,
+name|tpart
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 if|if
 condition|(
